[project]
name = "axg-python-sdk"
version = "0.1.0"
description = "Official Python SDK for Agent Execution Guard (AXG) token verification."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["axg_python_sdk*"]
